src/test/deca/syntax/valid/SansObjet/DeclVar-InitComplex.deca
// Description:
//    Declaration of a single variable with initialization.
//
// Results:
//    (void)
//
// Historique:
//    cree le 01/01/2022

{
        int x = 3 && 5 + -8;
}
